@@ -1,7 +1,8 @@
 wajig (2.7~pre) UNRELEASED; urgency=low
 
-  * NEW, DETAILNEW, and DESCRIBENEW: make them do as the commands imply;
-    Closes: #670687
+  * NEW, DETAILNEW, and DESCRIBENEW:
+    - make them do as the commands imply; Closes: #670687
+    - do not quit if a package is not found in APT cache; Closes: #667068
 
  -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Tue, 19 Jun 2012 04:31:23 +0200
 
